# autonumber-django

./: Dockerfile  README.md  env_example  pyproject.toml
src/: manage.py
src/autonumber/: asgi.py  server.py  settings.py  urls.py  wsgi.py
src/autonumber/ui/: admin.py  apps.py  forms.py  mixins.py  models.py  urls.py
src/autonumber/ui/management/commands/: add_cas_user.py  import.py
src/autonumber/ui/migrations/: 0001_initial.py
src/autonumber/ui/templates/: base.html
src/autonumber/ui/templates/batch/: new.html
src/autonumber/ui/templates/includes/: form_errors.html
src/autonumber/ui/templates/ui/: autonumber_confirm_delete.html  autonumber_detail.html  autonumber_form.html  autonumber_list.html  collectingarea_confirm_delete.html  collectingarea_detail.html  collectingarea_form.html  collectingarea_list.html  collectionarea_confirm_delete.html  collectionarea_detail.html  collectionarea_form.html  collectionarea_list.html  login.html  name_confirm_delete.html  name_detail.html  name_form.html  name_list.html  repository_confirm_delete.html  repository_detail.html  repository_form.html  repository_list.html  user_detail.html  user_list.html
src/autonumber/ui/tests/: conftest.py  test_authentication.py  test_authorization.py  test_autonumber_model.py  test_autonumber_views.py  test_batch_views.py  test_collectingarea_model.py  test_collectingarea_views.py  test_collection_area_model.py  test_collection_area_views.py  test_name_model.py  test_name_views.py  test_repository_model.py  test_repository_views.py  test_user_model.py  test_user_views.py
src/autonumber/ui/views/: __init__.py  auto_number.py  autocomplete.py  batch.py  collecting_area.py  collection_area.py  name.py  repository.py  user.py
