[project]
name = "autonumber-django"
version = "1.0.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.14.0"
dependencies = [
    "django>=5.2.7",
    "django-umd-lib-style>=1.2.0",
    "djangosaml2>=1.11.1",
]

[dependency-groups]
dev = [
    "debugpy>=1.8.17",
    "pytest>=8.4.2",
    "pytest-django>=4.11.1",
    "ruff>=0.14.3",
]

[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[tool.pytest.ini_options]
DJANGO_SETTINGS_MODULE = "autonumber.settings"

[tool.ruff]
    indent-width = 2
    line-length = 120

[tool.ruff.format]
    quote-style = "single"

